# dl_hw3_autoresearch

./: .gitignore  2026_DL_HW3.ipynb  HW3_Implementation_Guide.md  analyze.py  archive_topk.py  autoresearch_report.md  comparison_report.md  phase8_report.md  phase9_report.md  program.md  pyproject.toml  r14725055_submission.csv  r14725055_submission.pt  results.tsv  size_check.py  test.py
submissions/: leaderboard.tsv  r14725055_acc0.6508_0777c31.csv  r14725055_acc0.6508_0777c31.pt  r14725055_acc0.6511_8c5f16c.csv  r14725055_acc0.6511_8c5f16c.pt  r14725055_acc0.6522_431d87d.csv  r14725055_acc0.6522_431d87d.pt  r14725055_acc0.6526_aba9c99.csv  r14725055_acc0.6526_aba9c99.pt  r14725055_acc0.6599_cd97b79.csv  r14725055_acc0.6599_cd97b79.pt  r14725055_acc0.6752_26762fc.csv  r14725055_acc0.6752_26762fc.pt  r14725055_acc0.6759_24615ab.csv  r14725055_acc0.6759_24615ab.pt  r14725055_acc0.6842_dd926d4.csv  r14725055_acc0.6842_dd926d4.pt  r14725055_acc0.6851_4332098.csv  r14725055_acc0.6851_4332098.pt  r14725055_acc0.6879_9f07902.csv  r14725055_acc0.6879_9f07902.pt
